--- a/gpbot/templates/base.html
+++ b/gpbot/templates/base.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Venez écouter l'histoire de GrandPy !">
+        <meta name="description" content="Grand Papy Bot !">
         <meta name="author" content="Cuff">
         <title>GrandPy Bot</title>
 
@@ -34,7 +34,7 @@
                             <h1> Bienvenue sur GrandPyBot </h1>
                                 <div class="row">
                                     <div class="offset-3">
-                                    <h2> Le papy qui va te faire voyager </h2>
+                                    <h2> Papy va t`expliquer </h2>
                                     </div>
                                 </div>
                         </div>
@@ -47,12 +47,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <p> Alexandre CUFFEL </p>
+                        <p> Michael Benoit </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <a href="https://github.com/miscuff/GrandPy-Bot" title="Lien Git">Lien Git</a>
+                        <a href="" title="Lien Git">Lien Git</a>
                     </div>
                 </div>
             </div>
@@ -61,5 +61,5 @@
     </body>
 
     <script type="text/javascript" src="{{ url_for('static', filename='js/base.js') }}"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ config['GOOGLE_API_KEY'] }}&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ config['AIzaSyBJBC0XAIGzQl9-As_nw5sTI2exAk0igzM'] }}&callback=initMap"></script>
 </html>
