--- a/gpbot/templates/base.html
+++ b/gpbot/templates/base.html
@@ -61,5 +61,5 @@
     </body>
 
     <script type="text/javascript" src="{{ url_for('static', filename='js/base.js') }}"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ config['AIzaSyBJBC0XAIGzQl9-As_nw5sTI2exAk0igzM'] }}&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ config['GOOGLE_API_KEY'] }}&callback=initMap"></script>
 </html>
