--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,7 +51,7 @@
         </p>
     </footer>
     <script src="https://code.jquery.com/jquery-1.12.3.js"
-        integrity="sha256-1XMpEtA4eKXNNpXcJ1pmMPs8JV+nwLdEqwiJeCQEkyc=" crossorigin="anonymous"></script>
+        integrity="" crossorigin="anonymous"></script>
     <script src="/static/js/script.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key={{ key }}&callback=initMap&libraries=&v=weekly"
