--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,7 +26,7 @@
         <div id="chat_container">
             <ul>
                 <li class="li_left">
-                    Tu veux aller ou ? Pose ta question petit !
+                    Tu veux aller où ? Pose ta question petit !
                     <br>
                     <img src="/static/img/logor.png" alt="logo" id="Rick">
                     <br>
