--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,9 +43,9 @@
         </form>
     </div>
     <footer>
-        <p>MB
+        <p>Michael BENOIT
 
-            <a href="">
+            <a href="https://github.com/MikaIce/P07_GrandPy_Bot">
                 <img alt="lien vers github" src="/static/img/github.png" width="86" height="35" />
             </a>
         </p>
